[project]
name = "rpn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antoine Delannoy", email = "antoine.j.m.delannoy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
